RESOLVED FIXED99654
REGRESSION (r95391): ComplexTextController is unnecessarily slow with characters with combining marks when the base character is not covered by any font
https://bugs.webkit.org/show_bug.cgi?id=99654
Summary REGRESSION (r95391): ComplexTextController is unnecessarily slow with charact...
mitz
Reported 2012-10-17 16:29:45 PDT
REGRESSION (r95391): ComplexTextController is unnecessarily slow with characters with combining marks when the base character is not covered by any font
Attachments
Patch (6.92 KB, patch)
2012-10-17 16:42 PDT, mitz
adele: review+
mitz
Comment 1 2012-10-17 16:30:14 PDT
mitz
Comment 2 2012-10-17 16:42:56 PDT
mitz
Comment 3 2012-10-17 22:02:16 PDT
Note You need to log in before you can comment on or make changes to this bug.